--- a/ContosoBankChatbot/ContosoBankChatbot/Web.config
+++ b/ContosoBankChatbot/ContosoBankChatbot/Web.config
@@ -11,9 +11,9 @@
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="ScottContosoBankChatbot" />
-    <add key="MicrosoftAppId" value="74001cac-27c6-47c2-984f-ce049c13b2c8" />
+    <add key="MicrosoftAppId" value="" />
     <!--74001cac-27c6-47c2-984f-ce049c13b2c8-->
-    <add key="MicrosoftAppPassword" value="kofFNVqUrDv2gq3knggKVJP" />
+    <add key="MicrosoftAppPassword" value="" />
     <!--kofFNVqUrDv2gq3knggKVJP-->
     <add key="BingSpellCheckApiKey" value="8ae90e80bc4346d59c0f07529dadaa4e" />
     <add key="IsSpellCorrectionEnabled" value="false" />
